fix: remove wrong font swap property

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -26,7 +26,6 @@ body {
 %font-sans {
   font-family: $sans;
   font-feature-settings: 'ss02', 'ss04', 'ss06'; //ss03 for curled 'r'
-  font-display: swap;
 }
 
 %font-mono {
